[workspace]
members = [
"crates/base-shader",
"crates/shared",
"crates/shader_builder",
"crates/msdf-renderer",
]

resolver = "2"

[workspace.dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "83f8c72"}
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "83f8c72"}
bytemuck = "1"
log = "0.4.15"
thiserror = "1.0"
simple_logger = "4"
winit = "0.28"
ahash = "0.8.7"
