[package]
name = "base-shader"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "dylib"]


[dependencies]
shared = {path = "../shared"}
marpii-rmg-shared = {git = "https://gitlab.com/tendsinmende/marpii.git", default-features = false}
marpii-rmg-task-shared = {git = "https://gitlab.com/tendsinmende/marpii.git", default-features = false}
