[package]
name = "msdf-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marpii = {git = "https://gitlab.com/tendsinmende/marpii.git", default-features = false, features = ["default_allocator", "logging"]}
#marpii = {path = "../../../../marpii/crates/marpii", default-features = false, features = ["default_allocator", "logging"]}
#marpii-rmg = {path = "../../../../marpii/crates/marpii-rmg", default-features = false}
marpii-rmg = {git = "https://gitlab.com/tendsinmende/marpii.git", features = ["timestamps"]}
#marpii-rmg-shared = {path = "../../../../marpii/crates/marpii-rmg-shared", default-features = false}
marpii-rmg-shared = {git = "https://gitlab.com/tendsinmende/marpii.git", default-features = false}
#marpii-rmg-tasks = {path = "../../../../marpii/crates/marpii-rmg-tasks/marpii-rmg-tasks"}
marpii-rmg-tasks = {git = "https://gitlab.com/tendsinmende/marpii.git"}

ahash.workspace = true
winit.workspace = true
shared = {path = "../shared"}
shader_builder = {path = "../shader_builder"}
hotwatch = "0.5.0"
log.workspace = true


msdfc = {git = "https://gitlab.com/tendsinmende/minisdf.git", branch = "main"}
spv-patcher = {git = "https://gitlab.com/tendsinmende/spv-patcher.git", branch = "main"}
patch-function = {git = "https://gitlab.com/tendsinmende/spv-patcher.git", branch = "main"}
#spv-patcher = {path = "../../../../../compiler/spv-patcher/crates/spv-patcher"}
#patch-function = {path = "../../../../../compiler/spv-patcher/crates/patch-function"}

simple_logger.workspace = true
bytemuck.workspace = true
