[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#marpii-rmg-shared = {path = "../../../../marpii/crates/marpii-rmg-shared", default-features = false}
marpii-rmg-shared = {git = "https://gitlab.com/tendsinmende/marpii.git", default-features = false}
spirv-std.workspace = true
